# Improving-TCH

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  run_all_experiments.sh  run_all_preprocessing.sh
cmake-build/: CMakeCache.txt  Makefile  cmake_install.cmake
context/: bi_search_context.h  search_context.h
cpd_prepro/: reverse_tch_updown_query.h  st_dijkstra_query.h  tch_dijkstra_query.h  tch_downward_dijkstra_query.h  tch_updown_query.h  tch_upward_dijkstra_query.h
dataset/NY/: NY.coordinate
datastr/base/: bit_vector.cpp  pwl_ttf.h  spline.h  ttf_wrapper.h
datastr/cpd/: binary_search.h  bw_cpd.cpp  bw_cpd.h  cpd.cpp  cpd.h  range.h  rev_bw_cpd.cpp  rev_bw_cpd.h  rev_cpd.h
datastr/graph/: dynamic_graph.h  dynamic_search_graph.h  forward_search_graph.h  order_edge_data.h  search_graph.h  static_forward_search_graph.h  static_search_graph.h
experiments/: construct_bw_tch_cpd.cpp  construct_fw_tch_cpd.cpp  construct_reverse_fw_tch_cpd.cpp  construct_stch_mtch.cpp  generate_landmarks.cpp  generate_queries.cpp  run_experiments.cpp  run_ordering.cpp  split_data.cpp
io/: btch_format.h  edge_info.h  tpgr_format.h  tpgr_format_noise.h  vec_io.h
prepro/: edge_description.h  ordering.h  witness_search.h
query/: BMTCH.h  BMTCH_query.h  BSTCH.h  BTCH.h  BTCH_L.h  FMTCH_TCPD.h  FMTCH_TCPD_query.h  FTCH_CPD.h  FTCH_L.h  FTCH_RTPD.h  FTCH_TCPD.h  STCH_TCPD.h
util/: id_queue.h  misc.h  my_timer.cpp  my_timer.h
